--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag 'content_frame' do %>
 <div class="container mx-auto px-4 py-4 sm:py-8">
   <div class="max-w-lg mx-auto bg-white rounded-lg shadow-md p-4 sm:p-6">
     <h1 class="text-2xl font-bold text-gray-900 mb-6">Edit Expense</h1>
@@ -70,3 +71,4 @@
     <% end %>
   </div>
 </div>
+<% end %>
