--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -41,6 +41,7 @@
             </p>
             <div class="mt-4">
               <%= link_to "Connect to Xero", xero_connect_path, 
+                  data: { turbo: false },
                   class: "w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
             </div>
           <% end %>
